fix: align arrow, change link html structure, add disabled link

--- a/src/scss/modules/archive.scss
+++ b/src/scss/modules/archive.scss
@@ -18,23 +18,23 @@
     font-weight: 500;
     max-width: 42rem;
     padding: 1rem;
+    padding-right: 3rem;
     position: relative;
     text-transform: uppercase;
     transition: all 0.15s ease-in-out;
     width: 100%;
     &::after {
       content: url(../assets/icons/arrow.svg);
-      height: 1rem;
       position: absolute;
       right: 1rem;
-      bottom: 1.5rem;
-      transform: rotate(270deg);
+      bottom: 50%;
+      transform-origin: center;
+      transform: translateY(50%) rotate(-90deg);
       transition: all 0.5s ease-in-out;
       width: 1.5rem;
     }
     &--open.archive__button::after {
-      bottom: 1.2rem;
-      transform: rotate(-180deg);
+      transform: translateY(calc(50% - 0.2rem)) rotate(-180deg); // 0.2rem - half of a difference between height and width of the triangle - 15x19px
     }
   }
   &__flex-container {
@@ -47,11 +47,12 @@
       display: none;
     }
   }
-  &__link {
+  &__link-container {
+    display: inline-block;
     filter: $link-shadow-mobile;
     width: 10rem;
   }
-  &__year {
+  &__link {
     background-color: $primary;
     clip-path: polygon(8px 0%, 100% 0%, calc(100% - 8px) 100%, 0% 100%);
     display: block;
@@ -62,13 +63,17 @@
     padding-bottom: 0.8rem;
     text-align: center;
     transition: all 0.15s ease-in-out;
+    &--disabled {
+      background-color: lightgray;
+      cursor: auto;
+    }
   }
 }
 
 @media (min-width: 768px) {
   .archive {
     &__button {
-      padding-right: 3.5rem;
+      padding-right: 4rem;
       width: auto;
     }
   }
@@ -88,6 +93,13 @@
       &:focus {
         filter: $link-shadow-hover;
         transform: scale(1.1);
+      }
+      &--disabled {
+        &:hover,
+        &:focus {
+          filter: none;
+          transform: none;
+        }
       }
     }
   }
